<resources>
    <string name="app_name">Lucidity</string>

    <!-- Strings related to login -->
    <string name="prompt_username">Username</string>
    <string name="prompt_password">Password</string>
    <string name="prompt_password_confirm">Confirm Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Login</string>
    <string name="register_new">Register</string>
    <string name="submit">Submit</string>
    <string name="error_invalid_username">This username is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="prompt_caregiver_password">Caregiver Password</string>
    <string name="title_activity_medical_history">Medical History</string>
    <string name="title_activity_demographics">Demographics</string>
    <string name="prompt_name">Name</string>
    <string name="games">Memory \n Tests</string>
    <string name="photos">Photos</string>
    <string name="reminders">Reminders</string>
    <string name="histories">Personal Histories</string>
    <string name="name_of_location">Name of Location</string>
    <string name="sounds">Music and sounds</string>
    <string name="action_settings">Settings</string>
    <string name="hint_education">Please select your education</string>
    <string name="title_activity_med_history_demo">MedHistoryDemo</string>
    <string name="care_menu">Caregiver Menu</string>
    <string name="settings_menu">Settings Menu</string>
    <string name="test_material">Test Materials</string>
    <string name="game_menu">Tests Menu</string>
    <string name="person_dependent">Dependent</string>
    <string name="person_independent">Independent</string>
    <string name="object_recog">Object Recognition</string>
    <string name="confirm">Confirm</string>
    <string name="prompt_name_image">Name</string>
    <string name="prompt_relation_image">Relation</string>
    <string name="day">Day</string>
    <string name="week">Week</string>
    <string name="month">Month</string>
    <string name="year">Year</string>
    <string name="years">Year(s)</string>
    <string name="set_day">Change Day</string>
    <string name="set_month">Change Month</string>
    <string name="label_7_days">Last 7 Days</string>
    <string name="scores">Scores</string>
    <string name="permission_camera_rationale">Access to the camera is needed for detection</string>
    <string name="no_camera_permission">This application cannot run because it does not have the camera permission.  The application will now exit.</string>
    <string name="low_storage_error">Face detector dependencies cannot be downloaded due to low device storage</string>

    <string-array name="tracking_tests">
        <item>All Tests</item>
        <item>Block Memory Test</item>
        <item>Facial Memory Test</item>
        <item>Object Recognition Test</item>
        <item>Spacial Memory Test</item>
        <item>Recall Memory Test</item>
    </string-array>

    <string name="photoFromGal"> Add Photo\nFrom Gallery </string>
    <string name="photoFromCam"> Add Photo\nFrom Camera </string>
    <string name="photoSync"> Sync with\nAccount </string>
    <string name="photoGal"> Current\nGallery </string>
    <string name="locationSync"> Sync with\nAccount </string>
    <string name="locationView"> View Current\nLocations </string>
    <string name="uploadNotif">Upload Results</string>
    <string name="questionnaire_prompt">Please answer the following questions to get started on filling out your personal history.
        \nTo skip a question just leave it blank. To enter a period of time, enter two years separated by a dash(-).</string>
    <string name="history_question_1">Where and when were you born?</string>
    <string name="history_question_2">Where and when did you attend primary school?</string>
    <string name="history_question_3">Where and when did you attend high school?</string>
    <string name="history_question_4">Where and when did you attend college?</string>
    <string name="history_question_5">Where and when was your first job?</string>
    <string name="history_question_6">Where and when did you get married?</string>
    <string name="history_question_7">Where and when did you have your first child?</string>
    <string name="history_question_8">List locations that you have lived in and the time period.</string>
    <string name="history_question_9">List locations that you have lived in and the time period.</string>
    <string name="history_question_10">List locations that you have lived in and the time period.</string>

</resources>
