<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:orientation="vertical">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="180dp"
        android:layout_weight="2"
        android:orientation="horizontal"
        android:layout_gravity="center"
        android:background="@color/Transparent">
        <Button
            android:id="@+id/btn_add_gallery"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:background="@drawable/uploadchoice"
            android:text="@string/photoFromGal"
            android:textColor="@color/colorWhite"
            android:textSize="20dp"
            android:fontFamily="@font/kayak_sans_regular"
            android:layout_weight="1"/>
        <Button
            android:id="@+id/btn_add_camera"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:background="@drawable/uploadchoice"
            android:textColor="@color/colorWhite"
            android:fontFamily="@font/kayak_sans_regular"
            android:textSize="20dp"
            android:text="@string/photoFromCam"
            android:layout_weight="1"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="180dp"
        android:layout_weight="2"
        android:orientation="horizontal"
        android:layout_gravity="center"
        android:background="@color/Transparent">
        <Button
            android:id="@+id/btn_current_gal"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:background="@drawable/uploadchoice"
            android:text="@string/photoGal"
            android:textColor="@color/colorWhite"
            android:textSize="20dp"
            android:fontFamily="@font/kayak_sans_regular"
            android:layout_weight="1"/>
        <Button
            android:id="@+id/btn_sync"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:background="@drawable/uploadchoice"
            android:textColor="@color/colorWhite"
            android:fontFamily="@font/kayak_sans_regular"
            android:textSize="20dp"
            android:text="@string/photoSync"
            android:layout_weight="1"/>
    </LinearLayout>
    <Button
        android:id="@+id/btn_cancel_img_dialog"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:background="@color/colorDarkPink"
        android:textColor="@color/colorWhite"
        android:textSize="36dp"
        android:fontFamily="@font/kayak_sans_regular"
        android:text="Cancel" />


    <!--<Button
        android:id="@+id/btn_add_gallery"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:background="@drawable/longbutton"
        android:text="Add Photo From Gallery" />

    <Button
        android:id="@+id/btn_add_camera"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:background="@drawable/longbutton"
        android:text="Add From Camera" />

    <Button
        android:id="@+id/btn_current_gal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:background="@drawable/longbutton"
        android:text="Show Current Gallery" />

    <Button
        android:id="@+id/btn_sync"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:background="@drawable/longbutton"
        android:text="Sync With Account" />

    <Button
        android:id="@+id/btn_cancel_img_dialog"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/longbutton"
        android:text="Cancel" />-->


</LinearLayout>
