<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:layout_gravity="center"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="@drawable/login_background"
    tools:context="com.lucidity.game.LoginActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        android:paddingTop="50dp">
        <!-- Login progress -->

        <ProgressBar
            android:id="@+id/login_progress"
            style="?android:attr/progressBarStyleLarge"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:visibility="gone" />

        <TextView
            android:id="@+id/textView4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/ostrich_sans_rounded_medium"
            android:text="@string/app_name"
            android:textAlignment="center"
            android:textAppearance="@style/TextAppearance.AppCompat"
            android:textColor="@color/colorWhite"
            android:textSize="80sp" />

        <ScrollView
            android:id="@+id/login_form"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="25dp">

            <LinearLayout
                android:id="@+id/email_login_form"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingBottom="25dp"
                android:paddingTop="25dp">

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <AutoCompleteTextView
                        android:id="@+id/username"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@color/colorWhiteTransparent"
                        android:gravity="center_horizontal"
                        android:hint="@string/prompt_username"
                        android:inputType="text"
                        android:maxLines="1"
                        android:singleLine="true"
                        android:textColor="@color/colorWhite"
                        android:textColorHint="@color/colorWhite"
                        android:textSize="36sp" />

                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <EditText
                        android:id="@+id/password"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center_horizontal"
                        android:hint="@string/prompt_password"
                        android:imeActionId="6"
                        android:imeActionLabel="@string/action_sign_in_short"
                        android:imeOptions="actionUnspecified"
                        android:inputType="textPassword"
                        android:maxLines="1"
                        android:singleLine="true"
                        android:textColor="@color/colorWhite"
                        android:textColorHint="@color/colorWhite"
                        android:textSize="36sp" />

                </android.support.design.widget.TextInputLayout>

                <Button
                    android:id="@+id/sign_in_button"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="30dp"
                    android:background="@drawable/longbutton"
                    android:fontFamily="@font/ostrich_sans_rounded_medium"
                    android:text="@string/action_sign_in_short"
                    android:textAlignment="center"
                    android:textColor="@color/colorWhite"
                    android:textSize="36sp"
                    android:textStyle="bold" />

                <Button
                    android:id="@+id/register_button"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="30dp"
                    android:background="@drawable/longbutton"
                    android:fontFamily="@font/ostrich_sans_rounded_medium"
                    android:text="@string/register_new"
                    android:textAlignment="center"
                    android:textColor="@color/colorWhite"
                    android:textSize="36sp"
                    android:textStyle="bold" />

            </LinearLayout>
        </ScrollView>
    </LinearLayout>
</LinearLayout>